src/objects/AGAPE_ProgramOutcomeTracker__c.object
<CustomObject>
    <fields>
        <fullName>CharacterSkill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Character Skill</label>
        <referenceTo>AGAPE_CharacterSkills__c</referenceTo>
        <relationshipLabel>Program Outcome Tracker</relationshipLabel>
        <relationshipName>ProgramOutcomeTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>AGAPE_Goal__c</referenceTo>
        <relationshipName>Participant_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Particpant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Particpant</label>
        <referenceTo>AGAPE_Participant__c</referenceTo>
        <relationshipLabel>Program outcomes</relationshipLabel>
        <relationshipName>ProgramOutcomeTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point__c</fullName>
        <label>Point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>AGAPE_Program__c</referenceTo>
        <relationshipLabel>Program Instances</relationshipLabel>
        <relationshipName>ProgramOutcomeTracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Goal__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Program Outcome Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Goal__c</columns>
        <columns>CharacterSkill__c</columns>
        <columns>Point__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Particpant__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Outcome Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>